feat(core): discover rules via ServiceLoader; ensure deterministic finding order
Foundation work for community-contributed rules: Main previously hardcoded
a defaultRules() list, meaning any new rule required editing the core
project. Rules can now be added by placing a compiled class on the
classpath with the right service file — no change to Main needed.

- Added RuleRegistry (dev.scg.core): discoverRules() uses
  ServiceLoader.load(Rule.class), then sorts by Rule.id(). ServiceLoader
  itself does not guarantee stable ordering across modules/JARs, which
  matters once third-party rules share the classpath with the built-in
  ones — explicit sorting makes rule execution order (and therefore report
  order) reproducible regardless of how the classpath was assembled.
- Added src/main/resources/META-INF/services/dev.scg.core.Rule, listing
  ActuatorExposureRule and H2ConsoleExposedRule.
- Main now calls RuleRegistry.discoverRules() instead of a hardcoded list,
  and fails fast with a usage error if discovery returns empty (a silent
  "0 rules found" would otherwise look identical to "0 violations found" —
  same class of problem as the earlier missing-directory check). The
  isEmpty() branch itself isn't unit tested — simulating an empty
  ServiceLoader classpath from within the same test process is
  disproportionate effort for this project's size; verified manually
  instead.

While wiring this in, found a second, unrelated ordering gap while
reasoning about determinism: ConsoleReporter has sorted its output for a
long time (Finding::severity, then sourceFile, then profileLabel), but
JsonReporter never did — it serialized findings in whatever order
ConfigFileGrouper/Files.walk happened to produce, which carries no
ordering guarantee. Two runs against an unchanged directory could
therefore emit JSON with findings in a different order, which would look
like a false diff to any tool consuming --json output for CI comparison.

- Extracted Finding.DEFAULT_ORDER as a publ